# swiss-academic-libraries-mcp

./: CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  publish.yml
audits/2026-05-21-re-audit/: profile.json  report.md  summary.json
audits/2026-05-21-swiss-academic-libraries-mcp/: profile.json  report.md  summary.json
audits/2026-07-20-oa-legal-delta/: profile.json  report.md  summary.json
docs/: intl-metadata-probe.md  research-data-probe.md
src/swiss_academic_libraries_mcp/: __init__.py  api_client.py  intl_metadata.py  oa_legal.py  server.py
tests/: test_20_scenarios.py  test_intl_metadata.py  test_oa_legal.py  test_server.py
