[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-academic-libraries-mcp"
version = "1.2.0"
description = "MCP Server für Schweizer Wissenschaftsbibliotheken: swisscovery (SRU), e-rara/e-periodica/e-manuscripta (OAI-PMH) und Open-Access-Rechtsliteratur (sui generis, ex/ante, Repositorium.ch). Kein API-Key erforderlich."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "switzerland",
    "libraries",
    "swisscovery",
    "slsp",
    "e-rara",
    "e-periodica",
    "e-manuscripta",
    "open-data",
    "open-access",
    "sru",
    "oai-pmh",
    "academic",
    "legal",
    "law",
    "sui-generis",
    "ex-ante",
    "repositorium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.28.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
swiss-academic-libraries-mcp = "swiss_academic_libraries_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-academic-libraries-mcp"
Repository = "https://github.com/malkreide/swiss-academic-libraries-mcp"
Issues = "https://github.com/malkreide/swiss-academic-libraries-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_academic_libraries_mcp"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.envs.default.scripts]
test = "PYTHONPATH=src pytest tests/ -v"
test-live = "PYTHONPATH=src pytest tests/ -v -m live"
lint = "ruff check src/ tests/"
fmt = "ruff format src/ tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests as requiring live network access (deselect with '-m not live')",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
